--- a/app/src/main/res/layout/item_chracter.xml
+++ b/app/src/main/res/layout/item_chracter.xml
@@ -47,10 +47,12 @@
 
         <TextView
             android:id="@+id/textViewStatus"
-            android:layout_width="0dp"
             style="@style/TextAppearance.AppCompat.Subhead"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_marginTop="8dp"
+            android:layout_marginTop="4dp"
+            android:layout_marginBottom="4dp"
+            app:layout_constraintBottom_toTopOf="@+id/textViewOrigin"
             app:layout_constraintEnd_toStartOf="@+id/textViewSpecie"
             app:layout_constraintHorizontal_bias="0.5"
             app:layout_constraintStart_toEndOf="@+id/imageViewCharacter"
@@ -63,19 +65,19 @@
             style="@style/TextAppearance.AppCompat.Subhead"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_marginTop="8dp"
+            app:layout_constraintBottom_toBottomOf="@+id/textViewStatus"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.5"
             app:layout_constraintStart_toEndOf="@+id/textViewStatus"
-            app:layout_constraintTop_toBottomOf="@+id/textViewName"
-            tools:text="Specie: Human"/>
+            app:layout_constraintTop_toTopOf="@+id/textViewStatus"
+            tools:text="Specie: Human" />
 
         <TextView
             android:id="@+id/textViewOrigin"
             style="@style/TextAppearance.AppCompat.Medium"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_marginTop="8dp"
+            android:layout_marginTop="4dp"
             android:layout_marginBottom="8dp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="@+id/textViewName"
